--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@eslint/markdown": "^6.3.0",
     "eslint": "^9.24.0",
     "globals": "^16.0.0",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.9"
   }
 }
